// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing A component matches A snapshot, flex column 1`] = `
<View
  alignItems="center"
  backgroundColor="white"
  flex={1}
  flexDirection="column"
  justifyContent="center"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
    ]
  }
/>
`;

exports[`Testing A component matches A snapshot, flex row 1`] = `
<View
  alignItems="center"
  backgroundColor="white"
  flex={1}
  flexDirection="row"
  justifyContent="center"
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
    ]
  }
/>
`;
